kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cows
  name: cows
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cows
  template:
    metadata:
      labels:
        app: cows
    spec:
      containers:
      - image: ghcr.io/ijmacd/cows
        imagePullPolicy: Always
        name: cows
        args: [
          "--resources=/config/resources.json"
        ]
        volumeMounts:
          - name: config
            mountPath: /config
      volumes:
        - name: config
          configMap:
            name: cows-config
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
