kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cows
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: cows
