kube/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cows
spec:
  hostnames:
    - cows.ijmacd.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: cows
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
