kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odata
spec:
  rules:
  - host: odata.ijmacd.com
    http:
      paths:
      - backend:
          service:
            name: odata
            port:
              number: 80
        path: /
        pathType: Prefix
